# fastly-compute-template

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  fastly.testing.toml  fastly.toml
.github/: dependabot.yml
.github/actions/ci_prepare_fastly_cli/: action.yaml
.github/actions/ci_prepare_npm_for_integration_test/: action.yaml
.github/actions/ci_prepare_to_compile/: action.yaml
.github/actions/download_build_artifacts/: action.yaml
.github/actions/rust-toolchain/: action.yml
.github/actions/rust_toolchain/: action.yml
.github/actions/upload_build_artifacts/: action.yaml
.github/workflows/: __ci.yaml  __deploy_for_canary.yaml  _ci.yaml  ci.yaml  ci_for_pr.yaml  ci_on_main.yaml  ci_workflow.yaml  experiment.yaml  on_main.yaml  release.yaml
crates/main/: Cargo.toml  build.rs
crates/main/src/: application.rs  build_info.rs  fastly_trace_id.rs  lib.rs  main.rs
integration_tests/: .eslintrc.cjs  .prettierrc.toml  Makefile  README.md  ava.config.mjs  eslint.config.js  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  url_origin.js
integration_tests/__helpers__/: http_status.js  mime.js
integration_tests/__tests__/: buildinfo.test.js  bypass_to_mock.test.js  example.canary.js  example.production.js  index.test.js  package.json
integration_tests/__tests__/__helpers__/: domain.js  http_header.js
integration_tests/__tests__/src/__helpers__/: domain.js
integration_tests/auto_tests/: package.json
integration_tests/auto_tests/__tests__/: buildinfo.test.js
integration_tests/config/: package.json
integration_tests/config/src/: lib.js
integration_tests/eslint_config/: package.json
integration_tests/http_helpers/: http_header.js  package.json
integration_tests/http_helpers/src/: http_header.js  lib.js
integration_tests/logger/: mod.js  package.json
integration_tests/mock_server/: main.js  package.json
integration_tests/mock_server/shared/: context_logger.js  create_server.js  parse_cli.js  req_context.js
integration_tests/mock_server/src/: main.js
integration_tests/mock_server/src/shared/: context_logger.js  create_server.js  parse_cli.js
integration_tests/pkgs/auto_tests/: ava.config.mjs  package.json
integration_tests/pkgs/auto_tests/__tests__/: buildinfo.test.js  example.test.js  example_canary.test.js  example_production.test.js
integration_tests/pkgs/config/: package.json
integration_tests/pkgs/config/src/: dir_names.js  lib.js  release_channel.js
integration_tests/pkgs/eslint_config/: package.json
integration_tests/pkgs/eslint_config/src/: config.js  prettier_ovrride.js
integration_tests/pkgs/logger/src/: lib.js  logger.js
integration_tests/pkgs/mock_server/src/: main.js
integration_tests/pkgs/mock_server/src/shared/: context_logger.js  create_server.js  mini_url_pattern_router.js  req_context.js
integration_tests/pkgs/supervisor/src/: assert_types.js  poll_to_launch_app.js  process_config.js  spawn.js  supervisor.js
integration_tests/src/: flags.js  mock_server.js  supervisor.js
integration_tests/src/supervisor/: flags.js  supervisor.js
integration_tests/supervisor/: assert_types.js  cli_flags.js  flags.js  logger.js  package.json  poll_to_launch_app.js  process_config.js  spawn.js  supervisor.js  sv_ctx.js
integration_tests/supervisor/src/: cli_flags.js  main.js  process_config.js  spawn.js  supervisor.js  sv_ctx.js
integration_tests/testcases/: package.json
integration_tests/testcases/__tests__/: bypass_to_mock.test.js  index.test.js
integration_tests/testcases/__tests__/__helpers__/: domain.js
integration_tests/tools/: package.json
integration_tests/tools/eslint/: prettier_ovrride.cjs  prettier_ovrride.js
src/: main.rs
terraform/canary/: .terraform.lock.hcl  main.tf
tools/: whitespace.txt
