[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
publish = false
version = "0.0.0"
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
fastly = "^0.11.11"


[workspace.lints.rust]
# We would like to more recommend to use rust 2018 idioms
# See https://doc.rust-lang.org/rustc/lints/groups.html
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# We enable clippy rules as same level as `clippy:all` except `clippy:style`.
# See https://github.com/tetsuharuohzeki/fastly-compute-template/issues/119
#
# I think rust-clippy's style rules a bit opinionated
# and I guess we don't have to enable about it. Hence, we disable it.
#
# If we face some problems about sorting a style,
# then we should rethink to enable `clippy:style`.
complexity = "warn"
correctness = "warn"
suspicious = "warn"
perf = "warn"
# We would like to create a return value variable.
# That makes it easy to add a break point for the return value by debugger.
let_and_return = { level = "allow", priority = 2 }
# We would like to write annotate explicitly.
needless_lifetimes = { level = "allow", priority = 2 }


[profile]
[profile.release]
debug = 1
lto = "thin"
