[package]
name = "c_at_e_main"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
fastly.workspace = true

[features]

# These feature flags represents _release channel_.
# These are mutually exclusive. You cannot enable both of them.
production = []
canary = []
