[package]
name = "c_at_e_main"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
fastly.workspace = true
serde = "1.0.226"
serde_json = "1.0.145"

[lints]
workspace = true

[features]
# These feature flags represents _release channel_.
# These are mutually exclusive. You cannot enable both of them.
production = []
canary = []
